Use records to NodeManager objects